// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The level manager actions Matches the current snapshot 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <styled.button
        disabled={null}
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={false}
        onClick={[Function]}
      >
        <span>
          Rename
        </span>
      </styled.button>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`The level manager actions Matches the current snapshot if a level isn't selected 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <styled.button
        disabled={null}
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Rename
        </span>
      </styled.button>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`The level manager actions Matches the current snapshot if renaming a level 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <styled.button
        disabled="1"
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </styled.button>
    </styled.li>
    <styled.li>
      <styled.button
        onClick={[Function]}
      >
        <span>
          Done
        </span>
      </styled.button>
    </styled.li>
  </styled.ul>
</styled.div>
`;
